[package]
name = "pulse"
version = "0.0.5"
authors = ["Jerboa"]

edition="2021"

[[bin]]
name = "pulse"
path = "src/main.rs"

[[bin]]
name = "pulse_http"
path = "src/main_http.rs"
required-features=["http"]

[[bin]]
name = "post_discord"
path = "src/post_discord.rs"

[features]
http = []

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
axum-server = { version = "0.3", features = ["tls-rustls"] }
rand =    { git = "https://github.com/rust-lang-nursery/rand" }
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4.3"
chrono = "0.4.31"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10.2"
semver = "1.0.20"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

